# speasy_proxy

./: .coveragerc  .gitignore  BACKLOG.md  CLAUDE.md  Dockerfile  MANIFEST.in  README.md  README.txt  conftest.py  development-nginx.ini  development.ini  logging.yaml  package-lock.json  package.json  production.ini  pyproject.toml  pytest.ini  setup.cfg  setup.py  speasy_config.py  spwc_config.py  vitest.config.js
.github/workflows/: codeql.yml
api_docs/: openapi.yaml
docker/: Dockerfile  build.sh  entry_point.sh
docker-devel/: Dockerfile  build.sh
docs/plans/: 2026-03-07-fastapi-modernization-design.md  2026-03-07-fastapi-modernization-plan.md  2026-03-08-3d-trajectory-demo-design.md  2026-03-08-3d-trajectory-demo-plan.md  2026-03-08-interactive-plot-page-design.md  2026-03-08-interactive-plot-page-plan.md  2026-03-08-multi-plot-design.md  2026-03-08-multi-plot-plan.md  2026-03-08-plot-zoom-pan-fix-design.md  2026-03-08-plot-zoom-pan-fix-plan.md  2026-03-08-preset-intervals-design.md  2026-03-08-presets-design.md  2026-03-08-presets-plan.md  2026-03-08-server-side-resampling-design.md  2026-03-08-server-side-resampling-plan.md  2026-03-08-spectrogram-performance-design.md  2026-03-09-optional-numba-resampling-design.md  2026-03-09-optional-numba-resampling-plan.md
speasy_proxy/: UvicornWorker.py  __init__.py  bokeh_backend.py  dependencies.py  inventory_updater.py  routes.py  test_app_smoke.py  tests.py
speasy_proxy/api/: __init__.py  compression.py  pickle.py
speasy_proxy/api_docs/: openapi.yaml
speasy_proxy/backend/: __init__.py  _resample_numba.py  _resample_numpy.py  bokeh_backend.py  inventory_updater.py  presets.py  resample.py  shared_inventory_store.py  test_bokeh_backend.py  test_inventory_updater.py  test_resample.py  test_shared_inventory_store.py
speasy_proxy/config/: __init__.py
speasy_proxy/frontend/: __init__.py  home.py
speasy_proxy/index/: __init__.py  test_index.py
speasy_proxy/presets/: mms1_fgm.json
speasy_proxy/static/: index.html  status.js  theme.css
speasy_proxy/templates/: demo_3d.html  index.html  layout.jinja2  plot.html  production.ini.jinja2  welcome.html  welcome.jinja2
speasy_proxy/views/: __init__.py  chart_roulette.py  default.py  get_cache_entries.py  get_data.py  get_inventory.py  get_speasy_version.py  get_version.py  notfound.py
spwc_proxy/: __init__.py  routes.py  tests.py
spwc_proxy/api_docs/: openapi.yaml
spwc_proxy/config/: __init__.py
spwc_proxy/index/: __init__.py
spwc_proxy/templates/: layout.jinja2  openapi.yaml.jinja2  production.ini.jinja2  welcome.jinja2
spwc_proxy/views/: __init__.py  default.py  get_cache_entries.py  get_data.py  get_spwc_version.py  get_version.py
tests/: test_api.py
tests/js/: api-client.test.js  cdf-codec.test.js  common.test.js  format.test.js  inventory-tree.test.js  (+4 more)
vagrant/: Vagrantfile  sciqlop-proxy.conf
(+40 files in other folders)
