[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core"]

[project]
name = 'speasy_proxy'
version = "0.10.1"
description = "A fast Speasy cache server."
keywords = ["satellite", "plasma-physics", "nasa-data", "amda", "cdpp", "CDF"]
authors = [
    { name = "Alexis Jeandet", email = "alexis.jeandet@member.fsf.org" }
]

maintainers = [
    { name = "Alexis Jeandet", email = "alexis.jeandet@member.fsf.org" }
]

requires-python = ">=3.8"
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ['apscheduler < 4.0.0', 'humanize', 'speasy>=1.2.3', 'diskcache', 'jinja2', 'zstd', 'bokeh>=3.0.0', 'matplotlib', 'fastapi[all]']
[project.urls]
homepage = "https://github.com/SciQLop/speasy_proxy"


