[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core"]

[project]
name = 'speasy_proxy'
version = "0.13.3"
description = "A fast Speasy cache server."
keywords = ["satellite", "plasma-physics", "nasa-data", "amda", "cdpp", "CDF"]
authors = [
    { name = "Alexis Jeandet", email = "alexis.jeandet@member.fsf.org" }
]

maintainers = [
    { name = "Alexis Jeandet", email = "alexis.jeandet@member.fsf.org" }
]

requires-python = ">=3.8"
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ['humanize', 'speasy>=1.6.0', 'pycdfpp>=0.7.3', 'diskcache', 'jinja2', 'pyzstd', 'bokeh>=3.0.0', 'matplotlib', 'fastapi[all]', 'fastapi-utilities', 'uvicorn', 'uvicorn-worker', 'pycrdt-websocket >=0.15.4,<0.16.0']
[project.optional-dependencies]
dev = [
    'pytest',
    'ddt',
    'pytest-asyncio',
    'pytest-cov',
    'black',
    'isort',
    'mypy',
    'flake8',
]
[project.urls]
homepage = "https://github.com/SciQLop/speasy_proxy"


